Crash in Power panel when holding a power profile
When I hold a profile for an app, g-c-c will crash when opened on Power panel.
(gnome-control-center:551378): cc-power-profile-row-CRITICAL **: 11:47:22.497: cc_power_profile_row_get_radio_button: assertion 'CC_IS_POWER_PROFILE_ROW (self)' failed
**
power-cc-panel:ERROR:../panels/power/cc-power-panel.c:1122:performance_profile_set_active: assertion failed: (button)
Bail out! power-cc-panel:ERROR:../panels/power/cc-power-panel.c:1122:performance_profile_set_active: assertion failed: (button)
fish: Job 1, 'gnome-control-center' terminated by signal SIGABRT (Abort)
Steps to reproduce:
- Open GNOME Settings on Power panel
- Hold a profile, e.g. using
powerprofilesctl launch epiphany
- Observe the crash.
(First and second step can happen in either order.)
This is on NixOS with gnome-control-center 41.1 and power-profile-daemon 0.10.1.
Stack trace
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:49
#1 0x00007f8d40b5b523 in __GI_abort () at abort.c:79
#2 0x00007f8d426efddc in g_assertion_message (domain=<optimized out>, file=0x589478 "../panels/power/cc-power-panel.c", line=<optimized out>, func=<optimized out>, message=<optimized out>)
at ../glib/gtestutils.c:3223
#3 0x00007f8d4274eebb in g_assertion_message_expr (domain=domain@entry=0x588e67 "power-cc-panel", file=file@entry=0x589478 "../panels/power/cc-power-panel.c", line=line@entry=1122,
func=func@entry=0x589b00 <__func__.1> "performance_profile_set_active", expr=expr@entry=0x58744f "button") at ../glib/gtestutils.c:3249
#4 0x00000000004ac6ce in performance_profile_set_active (self=<optimized out>, profile_str=<optimized out>) at ../panels/power/cc-power-panel.c:1122
#5 0x00000000004af047 in setup_power_profiles (self=0x1197540) at ../panels/power/cc-power-panel.c:1479
#6 cc_power_panel_init (self=0x1197540) at ../panels/power/cc-power-panel.c:1641
#7 0x00007f8d4283b61a in g_type_create_instance (type=<optimized out>) at ../gobject/gtype.c:1929
#8 0x00007f8d42821cc5 in g_object_new_internal (class=class@entry=0x12ad000, params=params@entry=0x7ffdebb7fc60, n_params=n_params@entry=2) at ../gobject/gobject.c:1945
#9 0x00007f8d428236a8 in g_object_new_valist (object_type=20071440, first_property_name=first_property_name@entry=0x57bd0a "shell", var_args=var_args@entry=0x7ffdebb7ff30) at ../gobject/gobject.c:2288
#10 0x00007f8d42823bd9 in g_object_new (object_type=<optimized out>, first_property_name=first_property_name@entry=0x57bd0a "shell") at ../gobject/gobject.c:1788
#11 0x000000000045da4d in cc_panel_loader_load_by_name (shell=<optimized out>, name=name@entry=0x1315ea0 "power", parameters=parameters@entry=0x0) at ../shell/cc-panel-loader.c:230
#12 0x00000000004616e0 in activate_panel (gicon=<optimized out>, visibility=<optimized out>, name=0x131cf40 "Power", parameters=0x0, id=0x1315ea0 "power", self=0x10d44d0) at ../shell/cc-window.c:182
#13 set_active_panel_from_id (self=0x10d44d0, start_id=0x1315ea0 "power", parameters=0x0, add_to_history=1, force_moving_to_the_panel=0, error=<optimized out>) at ../shell/cc-window.c:443
#14 0x00007f8d4281f300 in g_cclosure_marshal_VOID__STRINGv (closure=closure@entry=0x11cc4c0, return_value=return_value@entry=0x0, instance=instance@entry=0x117c1f0, args=args@entry=0x7ffdebb80310,
marshal_data=marshal_data@entry=0x0, n_params=n_params@entry=1, param_types=0x10f0b60) at ../gobject/gmarshal.c:1462
#15 0x00007f8d4281c889 in _g_closure_invoke_va (closure=closure@entry=0x11cc4c0, return_value=return_value@entry=0x0, instance=instance@entry=0x117c1f0, args=args@entry=0x7ffdebb80310, n_params=1,
param_types=0x10f0b60) at ../gobject/gclosure.c:893
#16 0x00007f8d42834d4b in g_signal_emit_valist (instance=0x117c1f0, signal_id=<optimized out>, detail=0, var_args=var_args@entry=0x7ffdebb80310) at ../gobject/gsignal.c:3406
#17 0x00007f8d42834fdf in g_signal_emit (instance=instance@entry=0x117c1f0, signal_id=<optimized out>, detail=detail@entry=0) at ../gobject/gsignal.c:3553
#18 0x000000000045fc36 in row_activated_cb (listbox=listbox@entry=0x11823f0, row=row@entry=0x12df990, self=0x117c1f0) at ../shell/cc-panel-list.c:587
#19 0x00007f8d4281f8ca in g_cclosure_marshal_VOID__OBJECTv (closure=closure@entry=0x118b3d0, return_value=return_value@entry=0x0, instance=instance@entry=0x11823f0, args=args@entry=0x7ffdebb80660,
marshal_data=marshal_data@entry=0x0, n_params=n_params@entry=1, param_types=0x117be10) at ../gobject/gmarshal.c:1910
#20 0x00007f8d4281c889 in _g_closure_invoke_va (closure=closure@entry=0x118b3d0, return_value=return_value@entry=0x0, instance=instance@entry=0x11823f0, args=args@entry=0x7ffdebb80660, n_params=1,
param_types=0x117be10) at ../gobject/gclosure.c:893
#21 0x00007f8d42834d4b in g_signal_emit_valist (instance=0x11823f0, signal_id=<optimized out>, detail=0, var_args=var_args@entry=0x7ffdebb80660) at ../gobject/gsignal.c:3406
#22 0x00007f8d42834fdf in g_signal_emit (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>) at ../gobject/gsignal.c:3553
#23 0x00007f8d4281c889 in _g_closure_invoke_va (closure=closure@entry=0x11813a0, return_value=return_value@entry=0x0, instance=instance@entry=0x12df990, args=args@entry=0x7ffdebb80938, n_params=0,
param_types=0x0) at ../gobject/gclosure.c:893
#24 0x00007f8d42834d4b in g_signal_emit_valist (instance=instance@entry=0x12df990, signal_id=signal_id@entry=321, detail=detail@entry=0, var_args=var_args@entry=0x7ffdebb80938) at ../gobject/gsignal.c:3406
#25 0x00007f8d428351ff in g_signal_emit_by_name (instance=0x12df990, detailed_signal=detailed_signal@entry=0x598788 "activate") at ../gobject/gsignal.c:3594
#26 0x0000000000460301 in cc_panel_list_set_active_panel (self=0x117c1f0, id=id@entry=0x131cf60 "power") at ../shell/cc-panel-list.c:1024
#27 0x000000000046248c in cc_window_constructed (object=0x10d44d0) at ../shell/cc-window.c:811
#28 0x00007f8d42821daf in g_object_new_internal (class=class@entry=0x10f2800, params=params@entry=0x7ffdebb80ca0, n_params=n_params@entry=7) at ../gobject/gobject.c:1985
#29 0x00007f8d428236a8 in g_object_new_valist (object_type=17695232, first_property_name=first_property_name@entry=0x588624 "application", var_args=var_args@entry=0x7ffdebb80f70) at ../gobject/gobject.c:2288
#30 0x00007f8d42823bd9 in g_object_new (object_type=<optimized out>, first_property_name=first_property_name@entry=0x588624 "application") at ../gobject/gobject.c:1788
#31 0x000000000046257c in cc_window_new (application=0x10b7970, model=model@entry=0xfe5dd0) at ../shell/cc-window.c:935
#32 0x000000000045c6b4 in cc_application_startup (application=0x10b7970) at ../shell/cc-application.c:234
#33 0x00007f8d4281c889 in _g_closure_invoke_va (closure=closure@entry=0xd01a80, return_value=return_value@entry=0x0, instance=instance@entry=0x10b7970, args=args@entry=0x7ffdebb81300, n_params=0,
param_types=0x0) at ../gobject/gclosure.c:893
#34 0x00007f8d42834d4b in g_signal_emit_valist (instance=0x10b7970, signal_id=<optimized out>, detail=0, var_args=var_args@entry=0x7ffdebb81300) at ../gobject/gsignal.c:3406
#35 0x00007f8d42834fdf in g_signal_emit (instance=instance@entry=0x10b7970, signal_id=<optimized out>, detail=detail@entry=0) at ../gobject/gsignal.c:3553
#36 0x00007f8d42941b42 in g_application_register (application=application@entry=0x10b7970, cancellable=cancellable@entry=0x0, error=error@entry=0x7ffdebb81420) at ../gio/gapplication.c:2209
#37 0x00007f8d42941f2a in g_application_real_local_command_line (application=0x10b7970, arguments=0x7ffdebb81478, exit_status=0x7ffdebb81474) at ../gio/gapplication.c:1111
#38 0x00007f8d4294226e in g_application_run (application=0x10b7970, argc=-340257676, argc@entry=1, argv=argv@entry=0x7ffdebb815e8) at ../gio/gapplication.c:2538
#39 0x000000000045bb94 in main (argc=<optimized out>, argv=<optimized out>) at ../shell/main.c:65
cc @hadess
Edited by Jan Tojnar