main: Check that profile exists before switching to it

Don't allow switching to an unsupported profile, or holding that
unsupported profile, as that might cause problems for front-ends that
can't display that combination.

See https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/1504